Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86291

Wayland doesn't export files properly in a no-opengl build

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.15.2, 6.0, 6.1.0 RC
    • 5.15
    • Wayland Compositor
    • None
    • Ubuntu 18.04
    • cab51443ed9246c14255dcb295764f4d15cffaa1 (qt/qtwayland/dev) 9c8e59a7a6b0cfaa7caf899bdb577270c83b9a12 (qt/qtwayland/5.15)

    Description

      Error copying /home/qt/work/qt/qtwayland/src/compositor/qwayland-server-hardware-integration.h to /home/qt/work/install_root/home/qt/work/install/include/QtWaylandCompositor/5.15.1/QtWaylandCompositor/private/qwayland-server-hardware-integration.h: Cannot open /home/qt/work/qt/qtwayland/src/compositor/qwayland-server-hardware-integration.h for input
      

      Attachments

        For Gerrit Dashboard: QTBUG-86291
        # Subject Branch Project Status CR V

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            tosaraja Tony Sarajärvi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes